更新内容如下： 1. 给Spine加了一个SetSkinObject接口， 用于局部换装 2. 加入了一个自定义jsb接口， 同时接入了播放视频的jsb操作 3. 修正iOS闪屏只显示一半的bug 4. 修正game.restart崩溃的问题 5. 修正iOS内存泄漏的bug.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -388,6 +388,12 @@ cocos_source_files(
     cocos/base/ZipUtils.h
 )
 
+##### customJSBridge
+cocos_source_files(
+    cocos/customJSBridge/CustomJSBridge.cpp
+    cocos/customJSBridge/CustomJSBridge.h
+)
+
 ##### memory
 cocos_source_files(
                  cocos/base/memory/AllocatedObj.cpp
@@ -420,6 +426,18 @@ cocos_source_files(
                  cocos/base/threading/ThreadSafeLinearAllocator.h
                  cocos/base/threading/ThreadSafeLinearAllocator.cpp
 )
+
+if(APPLE)
+cocos_source_files(
+                 cocos/base/threading/AutoReleasePool.h
+                 cocos/base/threading/AutoReleasePool-apple.mm
+)
+else()
+cocos_source_files(
+                 cocos/base/threading/AutoReleasePool.h
+                 cocos/base/threading/AutoReleasePool.cpp
+)
+endif()
 
 ##### job system
 cocos_source_files(
@@ -1173,6 +1191,9 @@ cocos_source_files(
                  cocos/bindings/auto/jsb_network_auto.h
     NO_WERROR    cocos/bindings/auto/jsb_pipeline_auto.cpp
                  cocos/bindings/auto/jsb_pipeline_auto.h
+
+    NO_WERROR    cocos/bindings/auto/jsb_customJSBridge_auto.cpp
+                 cocos/bindings/auto/jsb_customJSBridge_auto.h
 )
 
 if(USE_AUDIO)
